# diagrams-svgdom

./: LICENSE  default.nix  diagrams-svgdom.cabal  shell.nix
src/Diagrams/Backend/: AbstractSVG.hs  DOM.hs
src/Graphics/Rendering/: AbstractSVG.hs
src/Graphics/Svg/Abstract/: Elements.hs
