Name:                diagrams-svgdom
Version:             1.4.2
Synopsis:            Backend for diagrams that outputs ghcjs-dom transformations
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
-- Extra-source-files:  README.md, CHANGELOG.md
Author:              Benjamin Doyle
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-svg/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
Description:         -- This package provides a modular backend for rendering
                     -- diagrams created with the diagrams EDSL to Dom actions.
                     -- .
-- Source-repository head
--   type:     git
--   location: http://github.com/diagrams/diagrams-svg

Library
  Exposed-modules:     Diagrams.Backend.AbstractSVG
                       Diagrams.Backend.DOM
                       Graphics.Rendering.AbstractSVG
                       Graphics.Svg.Abstract.Elements
  Hs-source-dirs:      src
  Build-depends:       base                 >= 4.3   && < 4.13
                     , filepath
                     , mtl                  >= 1     && < 2.3
                     , bytestring           >= 0.9   && < 1.0
                     , base64-bytestring    >= 1     && < 1.1
                     , cereal
                     , cereal-text
                     , colour
                     , diagrams-core        >= 1.4   && < 1.5
                     , diagrams-lib         >= 1.4   && < 1.5
                     , ghcjs-dom            >= 0.8   && < 0.10
                     , JuicyPixels          >= 3.1.5 && < 3.3
                     , monoid-extras        >= 0.3   && < 0.6
                     , svg-builder          >= 0.1.2 && < 0.2
                     , text                 >= 0.11  && < 1.3
                     , split                >= 0.1.2 && < 0.3
                     , containers           >= 0.3   && < 0.6
                     , lens                 >= 4.0   && < 4.18
                     , hashable             >= 1.1   && < 1.3
                     , semigroups           >= 0.13  && < 0.19
                     , unordered-containers >= 0.2   && < 0.3

  Ghc-options:         -Wall

  Default-language:  Haskell2010
